# polykin

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  codecov.yml  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: CI.yml  build-deploy-pages.yml  pages.yml  publish.yml  release.yml  test.yml
_site/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_site/.doctrees/: api.doctree  environment.pickle  index.doctree
_site/_sources/: index.rst.txt
docs/: index.md  installation.md  reference.md
docs/bibliography/: bibliography.bib
docs/css/: mkdocstrings.css
docs/reference/: coefficients.md  copolymerization.md  diffusion.md  distributions.md  gen_reference.py  kinetics.md  physprops.md  types.md
docs/reference/copolymerization/: CopoFitResult.md  ImplicitPenultimateModel.md  InstantaneousCopoData.md  InstantaneousCopoData.md_  PenultimateModel.md  TerminalCopoModel.md  TerminalModel.md  _SUMMARY.md  convert_Qe_to_r.md  fit_Finemann_Ross.md  fit_copo_data.md  fit_reactivity_ratios.md  index.md  inst_copolymer_binary.md  inst_copolymer_multi.md  inst_copolymer_ternary.md  kp_average_binary.md  monomer_drift_binary.md  monomer_drift_multi.md  radical_fractions_multi.md  radical_fractions_ternary.md  sequence_multi.md  transitions_multi.md  tuples_multi.md
docs/reference/diffusion/: VrentasDudaBinary.md  hayduk_minhas.md  index.md  wilke_chang.md  wilke_lee.md
docs/reference/distributions/: DataDistribution.md  Flory.md  LogNormal.md  MixtureDistribution.md  Poisson.md  SchulzZimm.md  WeibullNycanderGold_pdf.md  _SUMMARY.md  convert_polymer_standards.md  convolve_moments.md  convolve_moments_self.md  index.md  plotdists.md  reconstruct_Laguerre.md
docs/reference/emulsion/: nbar_Li_Brooks.md  nbar_Stockmayer_OToole.md
docs/reference/flow/: index.md
docs/reference/hmt/: index.md  plots.ipynb
docs/reference/kinetics/: Arrhenius.md  Eyring.md  PropagationHalfLength.md  TerminationCompositeModel.md  _SUMMARY.md  index.md
docs/reference/math/: RootResult.md  _SUMMARY.md  confidence_ellipse.md  confidence_region.md  derivative_centered.md  derivative_complex.md  fzero_brent.md  fzero_newton.md  fzero_secant.md  hessian2.md  i2erfc.md  ierfc.md  index.md  ode_rk.md  ode_rk2.md  root_newton.md  root_secant.md  roots_xcotx.md  roots_xtanx.md  simplify_polyline.md
docs/reference/physprops/: Antoine.md  DIPPR.md  Tait.md  Wagner.md  antoine.ipynb  index.md  pvtpolymer.md  vapor_pressure.md
docs/reference/properties/: acm.md_  dippr.md  index.md  pvt_polymer.md  vapor_pressure.md
docs/reference/reactors/: index.md
docs/reference/stepgrowth/: index.md  solutions.md
docs/reference/thermo/: index.md
docs/reference/transport/: CD0_sphere.md  Cd_sphere.md  Nu_cylinder.md  Nu_flatplate.md  Nu_sphere.md  Nu_tank.md  Nu_tube_internal.md  fD_Colebrook.md  fD_Haaland.md  plots.ipynb  pressure_drop_pipe.md  terminal_velocity_Stokes.md  (+2 more)
docs/source/: api.rst  conf.py
docs/tutorials/: _SUMMARY.md  activity_coefficient_models.ipynb  coefficients.ipynb  copolymerization.ipynb  copolymerization_fit.ipynb  diffusion.ipynb  diffusion_coefficients.ipynb  distributions.ipynb  index.md  kinetic_coefficients.ipynb  physprop_equations.ipynb  polykin_tutorials.md  thermal_conductivity.ipynb  viscosity.ipynb
examples/: distributions.ipynb
src/polykin/: __init__.py  _testutils.py  base.py  coefficients.py  correlation.py  distributions.py  math.py  ratecoefficients.py  types.py  utils.py
tests/: __init__.py  test_coefficients.py  test_copolymerization.py  test_diffusion.py  test_diffusivity.py  test_dippr.py  test_distributions.py  test_kinetic_coefficients.py  test_ratecoefficients.py  test_tait.py
tests/copolymerization/: test_copo_analysis.py  test_copo_models.py  test_copolymerization.py  test_fitting.py  test_models.py  test_multicomponent.py
tests/diffusion/: test_diffusivity.py
tests/distributions/: test_distributions.py  test_gold.py  test_misc.py
tests/emulsion/: test_nbar.py
tests/flow/: test_friction.py  test_prv.py  test_rheology.py
tests/hmt/: test_correlations.py  test_diffusion.py  test_hex.py
tests/kinetics/: test_kinetic_coefficients.py  test_nbar.py
tests/math/: test_derivative.py  test_derivatives.py  test_filters.py  test_fixpoint.py  test_jcr.py  test_multiroot.py  test_ode.py  test_roots.py  test_rootvec.py  test_solvers.py  test_special.py
tests/physprops/: __init__.py  test_dippr.py  test_equations.py  test_pvtpolymer.py  test_tait.py  test_vapor_pressure.py
tests/properties/: test_diffusivity.py  test_eos.py  test_equations.py  test_hvap.py  test_pvt.py  test_pvtpolymer.py  test_tait.py  test_thermal_conductivity.py  test_vaporization.py  test_viscosity.py
tests/reactors/: test_rtd.py
tests/stepgrowth/: test_solutions.py
tests/thermo/: test_acm.py  test_eos.py  test_flash.py
tests/transport/: test_diffusion.py  test_flow.py  test_heat.py  test_hmt.py  test_rheology.py
tests/utils/: test_math.py  test_tools.py
(+496 files in other folders)
