[tool.poetry]
name = "polykin"
version = "0.5.6"
description = "A polymerization kinetics library."
authors = ["HugoMVale <57530119+HugoMVale@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://hugomvale.github.io/polykin/"
repository = "https://github.com/HugoMVale/polykin"
documentation = "https://hugomvale.github.io/polykin/"
packages = [{ include = "polykin", from = "src" }]
keywords = ["polymer", "polymerization", "kinetics", "reaction"]
include = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13" # numba is incompatible with 3.13
mpmath = "^1.3.0"
pydantic = "^2.9.2"
numpy = "^1.26.4"
scipy = "^1.13.1"
matplotlib = "^3.8.0"
nptyping = "^2.5.0"
pandas = ">=2.2.2"
numba = "^0.60.0"
# sqlalchemy = "^2.0.22"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.43"
mkdocs-jupyter = "^0.25.1"
black = "^24.10.0"
markdown-exec = "^1.9.3"
mkdocs-table-reader-plugin = "^3.1.0"
mkdocstrings-python = "^1.12.2"
mkdocs-autolinks-plugin = "^0.7.1"
griffe-inherited-docstrings = "^1.1.0"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-xdist = "^3.5.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["-n=2", "--import-mode=importlib"]

[tool.ruff.lint]
select = ["NPY201"]
