[project]
name = "polykin"
version = "0.6.0"
license = { file = "LICENSE" }
description = "A polymerization kinetics library."
readme = "README.md"
keywords = ["polymer", "polymerization", "kinetics", "reaction"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
]

requires-python = ">=3.10.0"

dependencies = [
    "matplotlib>=3.8",
    "mpmath>=1.3.0",
    "numba>=0.60.0",
    "numpy>=1.26.4",
    "odrpack>=0.3.5",
    "pandas>=2.2.2",
    "pydantic>=2.10.2",
    "scipy>=1.13.1",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.14.9",
]
docs = [
    "black>=24.10.0",
    "griffe-inherited-docstrings>=1.1.1",
    "markdown-exec>=1.9.3",
    "mkdocs>=1.6.1",
    "mkdocs-autolinks-plugin>=0.7.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-material>=9.5.46",
    "mkdocs-table-reader-plugin>=3.1.0",
    "mkdocstrings-python>=1.12.2",
]

[project.urls]
Homepage = "https://hugomvale.github.io/polykin/"
Source = "https://github.com/HugoMVale/polykin"
Documentation = "https://hugomvale.github.io/polykin/"

[tool.pytest.ini_options]
addopts = ["-v", "-s", "-n=2"]

[tool.ruff]
line-length = 90
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "D", "NPY201"]
ignore = ["D100", "D104", "D205", "F403"]
pydocstyle = { convention = 'numpy' }

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D103"]

[tool.back]
line-length = 90

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
